--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
 		"redux-thunk": "^2.3.0"
 	},
 	"lint-staged": {
-		"src/**/*.{js,jsx,json,css,scss}": [
-			"prettier --tab-width 4 --print-width 100 --write",
-			"git add"
-		]
+		"linters": {
+			"src/**/*.{js,jsx,json,css,scss}": [
+				"prettier --tab-width 4 --print-width 100 --write",
+				"git add"
+			]
+		}
 	},
 	"scripts": {
 		"precommit": "lint-staged",
